@@ -1,42 +1,45 @@
-func isNil(string : String?) -> Bool{
-    if let string = string && string != ""{
-        return true
-    }
-    return false
+import Foundation
+
+
+
+func entry(numberMax:Int) -> Int{
+    var number = -1
+    repeat {
+        if let input = readLine() {
+            if let tmp = Int(input) {
+                number = tmp
+            }
+        }
+    } while number < 0 || number > limit
+    return number
 }
+
+func entry(valueMax: Int) -> Int{
+    var number = 0
+    repeat {
+        if let input = readLine() {
+            if let tmp = Int(input) {
+                number = tmp
+            }
+        }
+    } while number <= 0 || number > limit
+    return number
+}
+
 
 // initilalise une nouvelle partie
 func newGame() {
     // 
     print("choisissez votre mode de jeu\n")
-    n = readLine()
-    if !isNil(string :n){
-        n = Int(n)
-    }else{
-        n = 0
-    }
+    var n = entry(limit :1)
     // créer la partie avec le plateau rempli aléatoirement de Marbles
     var game = Board.init(mode : n)
-    // création des 2 joueurs 
-    // Le joueur dont le numéro est 1 joue en premier
-    var player1 = User.init()
-    var player2 = User.init()
     print("la partie commence\n")
 }
 
 // Affiche l'interface du jeu à chaque tour
-func display(jeu : Board) {
-    var It = game.BoardIterator()
-    for elt in It{
-        
-        if It.next(){
-            print("B")
-        }
-        else{
-            print("N")
-        }
-            
-    }
+func displayGame(jeu : Board) {
+
 }
 
 // Affiche le score et éventuellement qui gagne
@@ -44,70 +47,46 @@ func displayScore(jeu : Board){
     // Affiche le score    
 }
 
+
 func main(){
     newGame()
-    // tant que aucun joueur n'a gagné la partie
+    var player = 1
+    var playerBool : Bool
+
     while !game.gameOver(){
-        display(jeu : game)
-        // user est le joueur dont c'est le tour de jeu
-        var user = board.TurnOf()
-        if game.CanMove(user)){
-            // Lire le numéro de la marble qu'on veux déplaçer
-            print("entrez le numéro de la Marble choisie\n")
-            let input = readLine()
-            // verifie que l'input n'est pas nil ou vide
-            // On passe à la suite quand il aura mis un input valide
-            while isNil(string: input){
-                print("numéro invalide, recommencez :\n")
-                input = readLine()
-            }
-            // converti l'entrée en Int 
-            input = Int(input)
-            // on stocke la Marble choisie
-            var currentMarble:Marble? =  user.getMarble(num : input)
-            while currentMarble == nil {
-                print("entrez le numéro de la Marble choisie\n")
-                let input = readLine()
-                // verifie que l'input n'est pas nil ou vide
-                // On passe à la suite quand il aura mis un input valide
-                while isNil(string: input){
-                    print("numéro invalide, recommencez :\n")
-                    input = readLine()
-                }
-                // converti l'entrée en Int 
-                input = Int(input)
-                // on stocke la Marble choisie
-                var currentMarble:Marble? =  user.getMarble(num : input)
-                
-            }
-            // on verifie que la marble existe
-            if let currentMarble = currentMarble {
-                // on vérifie su la Marble deplaçable
-                if user.isMovable(marble : currentMarble){
-                    // Lire le nombre de cases pour le déplaçement
-                    // on set la value à une valeur supérieure à 6 initialement
-                    // pour pouvoir rentrer la 1ère fois dans la boucle while 
-                    var value = 10
-                    // boucle qui permet de véifier si le nombre de cases choisies pour le déplacement est possible
-                    while value > user.cellsMovable(marble :currentMarble){
-                        // on change de type value et on la lis
-                        print("entrez un nombre de déplacement valide :\n")
-                        var value = readLine()
-                        // On passe à la suite quand il aura mis un input valide
-                        while isNil(string : value){
-                            print("numéro invalide, recommencez :\n")
-                            value = readLine()
-                        }
-                        // on transforme alors la value en Int
-                        value = Int(value)
-                    }
-                        // on deplace la marble du nombre de cases
-                        user.MoveMarble(marble :currentMarble, value :value)
-                }
-            }
+        displayGame(jeu : game)
+        print("Joueur \(player), c'est à vous de jouer !\n")
+        if player = 1 {playerBool = true}
+        else{ playerBool = false}
+
+        if player == 2 { player = 1}
+        else{ player = 2}
+
+        if !game.CanMove(estBlanc : playerBool){
+            continue
         }
+        print("Choisissez la marble à déplacer :\n")
+        print("Choix de la ligne : ")
+        var x = entry(numberMax:8) // la limite est incluse
+        print("\nChoix de la colonne : ")
+        var y = entry(numberMax:8) // la limite est incluse
+        let marble: Marble? = game.getMarble(x:x,y:y)
+        while let marble == nil || marble.estBlanc =! playerBool || !game.isInBorder(marble :marble){
+            print("\nLa Marble n'est pas bonne, veuillez en choisir une autre\n")
+            print("Choix de la ligne : ")
+            var x = entry(limit:8) // la limite est incluse
+            print("\nChoix de la colonne : ")
+            var y = entry(limit:8) // la limite est incluse
+            let marble: Marble? = game.getMarble(x:x,y:y)
+        }
+        print("Choisissez de combien de cases vous voulez déplacer cette Marble :")
+        let maxValue = game.cellsMovable(marble:marble, direction:marble.initalDirection)
+        var value = entry(limit = maxValue)
+        game.MoveMarble(marble:marble, value:value,direction: marble.initalDirection)
     }
+
     displayScore(jeu : game)
+
 }
 
 
